--- a/WebApp/project/templates/passwordreset.html
+++ b/WebApp/project/templates/passwordreset.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="column is-4 is-offset-4">
     <h3 class="title">Password Reset!</h3>
-    <h4>Enter Your Username</h4>
+    <h4>Enter User Details</h4>
     <div class="box">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
@@ -16,6 +16,16 @@
             <div class="field">
                 <div class="control">
                     <input class="input is-rounded" type="text" name="username" placeholder="Enter Your Username" autofocus="" required>
+                </div>
+            </div>
+            <div class="field">
+                <div class="control">
+                    <input class="input is-rounded" type="text" name="firstname" placeholder="First Name" autofocus="" required>
+                </div>
+            </div>
+            <div class="field">
+                <div class="calender">
+                    <input type="date" name="dob" required>
                 </div>
             </div>
             <button class="button is-block is-info is-large is-fullwidth">Verify User</button>
