--- a/WebApp/project/templates/signup.html
+++ b/WebApp/project/templates/signup.html
@@ -19,6 +19,9 @@
                 <div class="control">
                     <input class="input is-rounded" type="text" name="username" placeholder="Username" autofocus="" required>
                 </div>
+                <div>
+                    Username can not contain " !%-' " characters, and will be removed.
+                </div>
             </div>
             <div class="field">
                 <div class="control">
